<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_share"
        android:checkable="false"
        android:icon="@drawable/ic_share_custom"
        android:title="@string/share"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_delete"
        android:checkable="false"
        android:icon="@drawable/ic_delete_custom"
        android:title="@string/delete"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_add_to"
        android:checkable="false"
        android:icon="@drawable/ic_add_to_custom"
        android:title="@string/add_to"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_remove_from_album"
        android:checkable="false"
        android:icon="@drawable/ic_remove_from_album_custom"
        android:title="@string/remove_from_album"
        app:showAsAction="always" />

</menu>
